# rust6991

01/mini_grep/src/: main.rs
02/starter/collections/src/: main.rs
02/starter/data_analysis/: Cargo.toml
03/annotate_lifetimes/src/: lib.rs
03/christmas_tree/src/: main.rs
03/first_home_buyers/src/: main.rs
03/pusheen/src/: main.rs
03/type_lifetimes/src/: lib.rs
exercises_04_starter/doctor_who/src/: lib.rs
exercises_04_starter/my_bin/: Cargo.toml
exercises_04_starter/my_bin/src/: libmy_lib.rlib  main.rs
exercises_04_starter/my_lib/: Cargo.toml
exercises_04_starter/my_lib/src/: lib.rs
exercises_04_starter/vector_operations/src/: main.rs
exercises_05_starter/dungeons_and_dragons/src/: die.rs
exercises_05_starter/languages/src/: main.rs
exercises_05_starter/pointy/src/: lib.rs
exercises_07_starter/average_macro/src/: main.rs
exercises_07_starter/currying/src/: main.rs
exercises_07_starter/fun_types/src/: main.rs
exercises_07_starter/hooked/src/: main.rs
exercises_07_starter/repetition/src/: main.rs
exercises_08_starter/channels/: Cargo.toml
exercises_08_starter/channels/src/: main.rs
exercises_08_starter/send_sync/: questions.md
exercises_08_starter/train_game/src/: main.rs
exercises_08_starter/webserver/src/: main.rs
exercises_09_starter/myrc/src/: lib.rs
exercises_09_starter/rust2c/src/: main.rs
pars/: Cargo.toml  mark_request.txt
pars/src/: client.rs  libssh.rs  main.rs  ssh.rs  ssh_module.rs
rslogo/: Cargo.toml  mark_request.txt
rslogo/logo_examples/: 3_05_spiral.lg
rslogo/src/: drawsvg.rs  main.rs  tool.rs
(+4 files in other folders)
