[package]
name = "pars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pars"
path = "src/main.rs"
required-features = ["birdie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pars_libs = "0.1.3"

[features]
default = ["birdie"]
birdie = []
