[package]
name = "pars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pars"
path = "src/client.rs"
required-features = ["birdie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pars_libs = "0.1.3"
rayon = "1.8.0"
serde ={version =  "1.0.192" , features = ["derive"] }
serde_json = "1.0.108"
shlex = "1.2.0"

[features]
default = ["birdie"]
birdie = []
